# a2

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  README.md  _a2dev_setup.bat  a2 on github.com.URL  a2.ahk  a2.ahk.bak  a2.sublime-project  a2Starter.ahk  a2_init.ahk  a2_settings.ahk  a2_starter.ahk  a2ui.ahk  a2ui_build.bat  ahk-unit.conf.js  appveyor.yml  config.txt  desktop.ini  extentions.txt  how2a2.txt  l10n.toml  new  13.txt  package.json  pyproject.toml  req2.txt  requirements.txt  test1.ahk  test2.ahk
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
doc/: a2DO.txt  a2_layout.psd  a2_new_logo_colors.psd  a2_new_logo_sketches.psd  default a2mod dict.py  formLayout mockup.ui  how2a2.txt  plan.txt  snippets.txt
i18n/: README.md
i18n/de/: general.json  i18n.json
i18n/en/: general.json  i18n.json
lib/: Anchor.ahk  Explorer_Get.ahk  Globals.ahk  InstanceHandler.ahk  README.md  Run.ahk  _a2_portable.ahk  _a2dev_find_py.ahk  _a2dev_setup.ahk  _a2init_check.ahk  _a2ui dev.ahk  _a2ui release.ahk  _init_check.ahk  a2.ahk  a2_config.ahk  a2_core.ahk  a2_exceptions.ahk  a2_globals.ahk  a2_urls.ahk  a2_user_data.ahk  a2core.ahk  a2dev_find_py.ahk  a2icon.ahk  a2init_check.ahk  a2starter.ahk  a2ui release.ahk  a2ui.ahk  a2ui_starter.ahk  functions.ahk  functions.ahk.bak  gdip.ahk  json.ahk  simpleList.ahk  tt.ahk
lib/Autohotkey/: AutoHotkey Website.url  AutoHotkey.chm  AutoHotkey_L Website.url
lib/Autohotkey2/: AutoHotkey.chm  Install.cmd  WindowSpy.ahk  ahk_script.ahk
lib/_ahklib/: func_mouseposition.ahk
lib/_batches/: 1A_make_package.bat  1B_build_installer.bat  1_build_all.bat  build a2 exe.bat  build a2ui.exe DEV.bat  build uninstaller.bat  get_versions.bat
lib/_defaults/: a2.cfg  a2.css  a2_init.ahk  a2_settings.ahk  a2_urls.ahk  a2_user_includes.ahk  css_defaults.json  element.template.py  featured_packages.json  libs.ahk  user_data_include.template  user_data_includes.template
lib/_source/: _installib.ahk  a2_installer.ahk  a2_installer_manifest.xml  a2_installer_minifext.xml  a2_installer_silent.ahk  a2_starter.ahk  a2_starter.py  a2_ui_starter.py  a2_uninstaller.ahk  a2starter.ahk  a2ui_dev.ahk  a2ui_release.ahk  a2ui_starter.ahk  languages_short.ahk  manifest.xml.template  setup.ahk  test uninstaller.bat
lib/_startup_defaults/: a2.css  a2_settings.ahk
lib/ahklib/: Array.ahk  CEnumerator.ahk  CManifest.ahk  CNotification.ahk  CPrompt.ahk  CQueue.ahk  Class_SQLiteDB.ahk  ExplorerHelpers.ahk  Explorer_Get.ahk  Globals.ahk  HTTPRequest.ahk  ModuleModel.ahk  Navigation.ahk  ObjectTools.ahk  Run.ahk  VA.ahk  WaitForEvent.ahk  WinClip.ahk  _Struct.ahk  a2.ahk  ahk_functions.ahk  base64.ahk  func_file.ahk  func_mouseposition.ahk  func_string.ahk  functions.ahk  json.ahk  jxon.ahk  simpleList.ahk  sizeof.ahk  uri_encode.ahk
lib/batches/: 1A_build_py_package.bat  1B_finish_py_package.bat  1_build_all.bat  _build_installer.bat  _build_package_init.py  _build_py_package.bat  a2.sfx  a2SD.sfx  a2_starter_build.bat  a2app.spec  a2minifext.xml  a2starter_build.bat  a2ui_build.bat  build a2 exe.bat  build a2ui exe.bat  build uninstaller.bat  build_all.bat  build_installer.bat  build_py_package.bat  build_py_package.py  check_pyside2.py  finish_py_package.bat  get_py_path.bat  get_versions.bat  recompile_uis.py
lib/cmds/: check_update.ahk  getScopeNfo.ahk  get_AutoHotkey_version.ahk  get_coordinates.ahk  get_desktop_link_path.ahk  get_scope_nfo.ahk  get_startmenu_link_paths.ahk  get_win_startup_path.ahk  pick_scope_nfo.ahk  set_desktop_link.ahk  set_startmenu_links.ahk  set_windows_startup.ahk
lib/defaults/: a2_entry.template.ahk  a2_entry.template.ahk.ahk  a2_user_includes.ahk  default_package.json  element.template.py  tags.json  user_data_include.template
modules/CalculAid/: calculAid.ahk  config.json
modules/CharacterAid/: config.json  umlaut.ahk
modules/ExplorerHotkeys/: config.json  ftpExplorerCopy.ahk
modules/browserTools/: chromeShiftWheel.a2mod  chromeShiftWheel.ahk  config.json
modules/codeTools/: commandlinePaste.ahk  config.json  mel2py.ahk  nppExploreTo.ahk  nppSourceSelection.ahk  plainPaste.ahk  scriptDebugVariable.ahk  slasher.ahk
modules/commandLine/: commandLineClose.ahk  commandLinePaste.ahk  config.json
modules/dynHotstrings/: config.json  dynHotstrings.ahk
modules/pasteMenu/: config.json  pasteAdresses.ahk  pasteDates.ahk  pasteStuff.ahk
modules/skypeKeys/: captureCodeEditorCopy.ahk  config.json  skypeSnapshotKey.ahk
modules/texTools/: config.json  wordCount.ahk
modules/webTools/: BBCodeMenu.ahk  config.json  htmlMenu.ahk
modules/winHook/: vars.ahk  (+1 more)
settings/: _includes.ahk  _variables.ahk  a2.db  hotkeys.ahk  includes.ahk  init.ahk  libs.ahk  variables.ahk
tests/: string_join.tests.ahk  tests.ahk
ui/: a2.css  a2ahk.py  a2app.py  a2core.py  a2ctrl.py  a2db.py  a2dblib.py  a2design.ui  a2design_ui.py  a2dev.py  a2dl.py  a2download.py  a2init.py  a2mod.py  a2modsource.py  a2output.py  a2path.py  a2runtime.py  a2style.py  a2ui.py  a2ui_build.bat  a2uic.py  a2util.py  ahk.py  checkbox_edit.ui  checkbox_edit_ui.py  ctrl.ui  ctrl_ui.py  designer - Shortcut.lnk  fakeLog.py  hotkey.ui  hotkey2.ui  hotkey_edit.ui  hotkey_edit_ui.py  inputDialog_ui.py  qdl.py  scopeDialog.ui  scopeDialog_ui.py  untitled.ui  untitled_ui.py
(+686 files in other folders)
