[project]
name = "a2"
version = "0.6.0"
description = "Script managing and developing framework for Autohotkey"
authors = [{ name = "ewerybody" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["PySide6"]

[project.urls]
Homepage = "https://github.com/ewerybody/a2#readme"
Issues = "https://github.com/ewerybody/a2/issues"

[dependency-groups]
dev = ["distlib>=0.4.0", "pytest", "poethepoet"]

[tool.uv]
package = false

[tool.poe.tasks]
dev-exe = { cmd = "python lib/_batches/build/make_dev_root_executables.py", help = "Create fresh starter executables in the project root." }
build-package = { cmd = "python lib/_batches/build/make_package.py", help = "Build a new package into '_ package'."}
build-installer = { cmd = "python lib/_batches/build/build_installer.py", help= "Build the installer files."}
build = { sequence = ["build-package", "build-installer"], help = "Build complete package for release."}
test-py = { cmd = "pytest ui/test", help = "Test python code with pytest." }
test-ahk = { cmd = "python lib/Autohotkey/lib/test/run_ahk_tests.py", help = "Test Autohotkey code with AHKUnit." }
test = { sequence = ["test-ahk", "test-py"], help = "Run all available tests." }

[tool.ruff.format]
quote-style = "single"
