[project]
name = "a2"
version = "0.6.0"
description = "Script managing and developing framework for Autohotkey"
authors = [{ name = "ewerybody" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6",
    "distlib>=0.4.0",
    "pytest",
    "poethepoet",
    "rich>=14.3.3",
]
[project.urls]
Homepage = "https://github.com/ewerybody/a2#readme"
Issues = "https://github.com/ewerybody/a2/issues"

[dependency-groups]
gfx = ["pillow"]

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["ui"]

[tool.poe.tasks]
dev-bin-deps = { cmd = "python ui/a2dev/dependency/check.py", help = "Make sure binary dependencies are present and up-to-date." }
dev-exe = { cmd = "python ui/a2dev/build/root_executables.py", help = "Create fresh starter executables in the project root." }
dev-init = { sequence = [ "dev-bin-deps", "dev-exe" ], help = "Perform all dev init repo initialization steps." }
build-package = { cmd = "python lib/_batches/build/make_package.py", help = "Build a new package into '_ package'." }
build-installer = { cmd = "python lib/_batches/build/build_installer.py", help = "Build the installer files." }
build-theme = { cmd = "python ui/a2dev/build/theme.py", help = "Build theme files and colored icons from SVG sources. Needs Inkscape and gfx group!" }
build = { sequence = [ "build-package", "build-installer" ], help = "Build complete package for release." }
test-py = { cmd = "pytest ui/test", help = "Test python code with pytest." }
test-ahk = { cmd = "python lib/Autohotkey/lib/test/run_ahk_tests.py", help = "Test Autohotkey code with AHKUnit." }
test = { sequence = ["test-ahk", "test-py"], help = "Run all available tests." }
check-i18n = { help = "Validate i18n JSON files for encoding issues", cmd = "python ui/a2dev/check_i18n.py" }

[tool.poe]
envfile = [".vscode/.env"]

[tool.ruff]
line-length = 120
[tool.ruff.format]
quote-style = "single"
