[project]
name = "a2"
version = "0.6.0"
description = "Script managing and developing framework for Autohotkey"
authors = [{ name = "ewerybody" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6",
    "distlib>=0.4.0",
    "pytest",
    "poethepoet",
    "rich>=14.3.3",
    "ruff>=0.15.11",
]
[project.urls]
Homepage = "https://github.com/ewerybody/a2#readme"
Issues = "https://github.com/ewerybody/a2/issues"

[dependency-groups]
gfx = ["pillow"]

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["ui"]

[tool.poe.tasks]
dev-bin-deps = { help = "Make sure binary dependencies are present and up-to-date.", cmd = "python ui/a2dev/dependency/check.py" }
dev-exe = { help = "Create fresh starter executables in the project root.", cmd = "python ui/a2dev/build/root_executables.py" }
dev-init = { help = "Perform all dev init repo initialization steps.", sequence = [ "dev-bin-deps", "dev-exe" ] }
build-package = { help = "Build a new package into '_ package'.", cmd = "python ui/a2dev/build/package.py" }
build-installer = { help = "Build the installer files.", cmd = "python ui/a2dev/build/installer.py" }
build-theme = { help = "Build theme files and colored icons from SVG sources. Needs Inkscape and gfx group!", cmd = "python ui/a2dev/build/theme.py" }
build = { help = "Build complete package for release.", sequence = [ "build-package", "build-installer" ] }
test-py = { help = "Test python code with pytest.", cmd = "pytest ui/test" }
test-ahk = { help = "Test Autohotkey code with AHKUnit.", cmd = "python lib/Autohotkey/lib/test/run_ahk_tests.py" }
test = { help = "Run all available tests.", sequence = ["test-ahk", "test-py"] }
check-i18n = { help = "Validate i18n JSON files for encoding issues", cmd = "python ui/a2dev/check_i18n.py" }

[tool.poe]
envfile = [".vscode/.env"]

[tool.ruff]
line-length = 120
[tool.ruff.format]
quote-style = "single"
